--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   curved_labeled_navigation_bar: ^2.0.6
   device_preview: ^1.2.0
-  cloud_firestore:
-  firebase_core:
+ 
   firebase_messaging:
+  firebase_core: ^3.9.0
+  cloud_firestore: ^5.6.0
+  firebase_auth: ^5.4.0
+  
 
   dio: ^5.8.0+1
   flutter:
