--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   firebase_core: ^3.9.0
   cloud_firestore: ^5.6.0
   firebase_auth: ^5.4.0
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
+  
  
 
   dio: ^5.8.0+1
