--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: any
   shared_preferences: ^2.5.2
   video_player: ^2.9.3
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
