--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   shared_preferences: ^2.5.2
   
   change_app_package_name: ^1.5.0
+  rename_app: ^1.6.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
