--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,20 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.0
+  cloud_firestore: ^5.6.0
   cupertino_icons: ^1.0.8
   curved_labeled_navigation_bar: ^2.0.6
   device_preview: ^1.2.0
-
-  firebase_messaging: null
-  firebase_core: ^3.9.0
-  cloud_firestore: ^5.6.0
-  firebase_auth: ^5.4.0
-  cached_network_image: ^3.3.0
-  shimmer: ^3.0.0
-  
- 
-
   dio: ^5.8.0+1
+  firebase_auth: ^5.4.0
+  firebase_core: ^3.9.0
+  firebase_messaging: null
+  firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
@@ -49,8 +45,10 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.17
+  image_picker: ^1.1.2
   intl: any
   shared_preferences: ^2.5.2
+  shimmer: ^3.0.0
   video_player: ^2.9.3
 
 dev_dependencies:
