--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+5
 
 environment:
   sdk: ^3.5.4
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^3.3.0
   cloud_firestore: ^5.6.0
   cupertino_icons: ^1.0.8
+  video_player: ^2.9.2
   curved_labeled_navigation_bar: ^2.0.6
   device_preview: ^1.2.0
   dio: ^5.8.0+1
