--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: any
   shared_preferences: ^2.5.2
   shimmer: ^3.0.0
+  smooth_page_indicator: ^1.2.1
   video_player: ^2.9.3
 
 dev_dependencies:
